--- a/want_present/requirements.txt
+++ b/want_present/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.8.1
 Django==3.2.16
+exceptiongroup==1.2.1
+iniconfig==2.0.0
+packaging==24.0
+pluggy==1.5.0
+pytest==8.2.0
 pytz==2024.1
 sqlparse==0.5.0
+tomli==2.0.1
 typing_extensions==4.11.0
