--- a/want_present/requirements.txt
+++ b/want_present/requirements.txt
@@ -1,11 +1,26 @@
+anyio==4.3.0
+APScheduler==3.6.3
 asgiref==3.8.1
+cachetools==4.2.2
+certifi==2024.2.2
 Django==3.2.16
+djangorestframework==3.15.1
 exceptiongroup==1.2.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
 iniconfig==2.0.0
 packaging==24.0
 pluggy==1.5.0
 pytest==8.2.0
+pytest-django==4.8.0
+python-telegram-bot==13.7
 pytz==2024.1
+six==1.16.0
+sniffio==1.3.1
 sqlparse==0.5.0
 tomli==2.0.1
+tornado==6.4
 typing_extensions==4.11.0
+tzlocal==5.2
