--- a/want_present/requirements.txt
+++ b/want_present/requirements.txt
@@ -15,6 +15,7 @@ packaging==24.0
 pluggy==1.5.0
 pytest==8.2.0
 pytest-django==4.8.0
+python-dotenv==1.0.1
 python-telegram-bot==13.7
 pytz==2024.1
 six==1.16.0
