обновлённый файл-пример .env

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 TELEGTAM_TOKEN_BOT = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 
 SECRET_KEY = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
+
+USER_PASSWORD = 'xxxxxxxxxxxxxxxxxxxxx'
