карточка праздника для чата в отдельной функции

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ TELEGTAM_TOKEN_BOT = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 SECRET_KEY = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
 
 USER_PASSWORD = 'xxxxxxxxxxxxxxxxxxxxx'
+
+DEBUG = 'True'
+
+SUPERBOT_TOKEN = 'xxxxxxxxxxxxxxxxxxxxxxxxxxxx'
